<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>volta_description</name>
  <version>1.1.1</version>
  <description>The volta_description package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <author email="mahendra.l@botsync.co">Mahendra L Seervi</author>

  <maintainer email="nilhil@botsync.co">Nikhil Venkatesh</maintainer>
  <maintainer email="toship.s@botsync.co">Toship</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
